Build syntax tree.

--- a/Code/Makefile
+++ b/Code/Makefile
@@ -4,6 +4,6 @@ BISON 	:= bison
 CFLAGS 	:= -std=c99
 
 all :
-	$(FLEX) -o lexical.c lexical.l
-	$(BISON) -d -o syntax.c syntax.y
-	$(CC) lexical.c syntax.c main.c -o lexical -lfl -ly
+	$(FLEX) -o src/lexical.c src/lexical.l
+	$(BISON) -d -o src/syntax.c src/syntax.y
+	$(CC) -I include/ src/lexical.c src/syntax.c src/main.c src/syntax_tree.c -o lexical -lfl -ly
